--- a/bbb.local_actions.yml
+++ b/bbb.local_actions.yml
@@ -2,4 +2,4 @@ bbb.node_type.add:
   route_name: bbb.node_type.add
   title: 'Configure a new Content Type'
   appears_on:
-    - bbb.node_type.list
+    - entity.bbb_node_type.collection
