--- a/composer.json
+++ b/composer.json
@@ -10,6 +10,7 @@
     },
     "license": "GPL-2.0-or-later",
     "require": {
+        "php": "^7.1",
         "bigbluebutton/bigbluebutton-api-php": "^2.0"
     }
 }
